Use LinkedBlockingDeque to prevent NPE.